# remittance_recon

./: .env.example  .gitignore  BACKLOG.md  Implementation_plan.md  PROGRESS.md  README.md  TESTING.md  pending_items.md  pyproject.toml  seed_analysts.py  st_test.py  test_db.py  update_pipeline.py
.devcontainer/: devcontainer.json
.streamlit/: config.toml
Issues/: evv_tracker_issues.md
data/: recon.duckdb.wal  recon.duckdb.wal.bak
docs/: billing_scenarios.md
input/: EVV-2026-Billing-Log-Skilled.xlsx  Payroll-Billing-Remittance 02182026-02242026.xlsx
input/master_remit/: Remittance Design.docx
scratch/: test_resolution.py
src/: config.py
src/ai/: chat.py  prompts.py
src/db/: connection.py  queries.py  schema.py  unskilled_tracker_queries.py
src/etl/: file_watcher.py  name_match.py  payroll.py  pipeline.py  reconciliation.py  remittance.py  seed_tracker.py
src/ui/: app.py
src/ui/components/: charts.py  filters.py  kpi_cards.py
src/ui/pages/: 0_Weekly_Recon.py  1_Client_Ledger.py  2_Analyst_Workbench.py  3_Name_Match_Manager.py  4_AI_Chat.py  (+1 more)
tests/: conftest.py  test_ai_chat.py  test_evv_tracker_validation.py  test_file_watcher.py  test_name_match.py  test_name_match_extended.py  test_payroll_parser.py  test_payroll_parser_extended.py  test_pipeline.py  test_pipeline_extended.py  test_pipeline_unit.py  test_queries.py  test_queries_extended.py  test_reconciliation.py  test_reconciliation_extended.py  test_remittance_parser.py  test_remittance_parser_extended.py  test_schema.py  test_seed_tracker.py  test_unskilled_tracker.py
(+15 files in other folders)
